--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 host: 0.0.0.0
-baseurl: ''
+url: https://news.miyashita.com
 permalink: /:year/:month/:day/:title/
 paginate: 5
 paginate_path: /page-:num
